--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
   list-style-type: none;
 }
 
+body {
+  height: 100vh;;
+  width: 100vw;
+}
+
 /* NAVBAR */
 nav {
   background-color: #192727;
@@ -13,6 +18,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 10vh;
   
 }
 nav ul li {
@@ -63,7 +69,7 @@ nav a, .title-container {
 
 .input-container #search-input {
   border: none;
-  margin-left: 6px;
+  margin-left: 8px;
   width: 240px;
   height: 28px;
   color: #007679;
@@ -72,4 +78,14 @@ nav a, .title-container {
 
 .input-container #search-input::placeholder {
   color: #007679;
+}
+
+/* MAIN*/
+main {
+  background-image: 
+  linear-gradient(0.25turn, rgba(0, 118, 121, .9), rgba(117, 19, 93, 0.1)),
+  url('./city-skyline.jpg');
+  height: 90vh;
+  width: 100%;
+  background-size: cover;
 }
