--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ nav a, .title-container {
 }
 
 .title-container i {
-  transform: rotate(40deg);
+  transform: rotate(-40deg);
+  font-size: 22px;
 }
 
 .input-container {
@@ -88,4 +89,34 @@ main {
   height: 90vh;
   width: 100%;
   background-size: cover;
+}
+
+/* ICONS */
+
+.icons {
+  height: 100%;
+  width: 8%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icons span {
+  background-color: white;
+  height: 260px;
+  width: 1px;
+  opacity: .8;
+  margin: 40px 0;
+}
+
+.icons .fa-brands {
+  color: white;
+  font-size: 28px;
+  opacity: .8;
+  margin: 20px 0;
+}
+
+.icons .fa-brands:hover {
+  cursor: pointer;
+  opacity: 1;
 }
