--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ nav a, .title-container {
 main {
   background-image: 
   linear-gradient(0.25turn, rgba(0, 118, 121, .9), rgba(117, 19, 93, 0.1)),
-  url('./city-skyline.jpg');
+  url('./media/city-skyline.jpg');
   height: 90vh;
   width: 100%;
   background-size: cover;
@@ -182,4 +182,45 @@ main {
   color: #007679;
   background-color: white;
   transition: .4s;
+}
+
+/* RESULTS */
+#results {
+  width: 40%;
+  margin-top: 20px;
+  overflow-y: scroll;
+  box-sizing: content-box;
+}
+
+#results::-webkit-scrollbar {
+  display: none;
+}
+
+.result-container {
+  margin: 4px;
+  height: 460px;
+  background-color: white;
+  border-radius: 10px;
+  opacity: .8;
+}
+
+.result-img{
+  background-image: url('./media/city-picture.jpg');
+  background-size: cover;
+  height: 64%;
+  border-radius: 10px 10px 0 0;
+}
+
+.result-text{
+  margin: 20px;
+}
+
+.result-text button {
+  border: none;
+  background-color: #007679;
+  color: white;
+  border-radius: 5px;
+  height: 32px;
+  width: 80px;
+  border: 1px solid white;
 }
