--- a/about.css
+++ b/about.css
@@ -58,7 +58,7 @@ nav a, .title-container {
 main {
   background-image: 
   linear-gradient(0.25turn, rgba(0, 118, 121, .9), rgba(117, 19, 93, 0.1)),
-  url('./city-skyline.jpg');
+  url('./media/city-skyline.jpg');
   height: 90vh;
   width: 100%;
   background-size: cover;
@@ -126,6 +126,18 @@ main {
   display: flex;
   justify-content: space-between;
   width: 90%;
+}
+
+@media only screen and (max-width: 1100px){
+  .presentation h2, h3 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+  .team-container{
+    flex-direction: column;
+   
+  }
+
 }
 
 .team-cards-container{
