--- a/contact.css
+++ b/contact.css
@@ -58,7 +58,7 @@ nav a, .title-container {
 main {
   background-image: 
   linear-gradient(0.25turn, rgba(0, 118, 121, .9), rgba(117, 19, 93, 0.1)),
-  url('./city-skyline.jpg');
+  url('./media/city-skyline.jpg');
   height: 90vh;
   width: 100%;
   background-size: cover;
@@ -115,6 +115,13 @@ main {
   font-size: 86px;
   opacity: .9;
   margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 1100px){
+  .text h2 {
+    font-size: 52px;
+    margin-bottom: 30px;
+  }
 }
 
 .contact-form {
