--- a/index.css
+++ b/index.css
@@ -22,7 +22,6 @@ nav {
   
 }
 nav ul li {
-  display: inline;
   margin-right: 10px;
 }
 
@@ -40,10 +39,6 @@ nav a, .title-container {
   font-size: 22px;
 }
 
-.link-container {
-  width: 30%;
-}
-
 .link-container ul {
   display: flex;
   justify-content: space-around;
@@ -51,17 +46,13 @@ nav a, .title-container {
 
 .link-container a {
   cursor: pointer;
-}
-
-.input-container {
-  background-color: white;
-  width: 34%;
-  height: 40px;
-  border-radius: 30px;
-  display: flex;
+  margin: 0 10px;
 }
 
 .input-container ul {
+  background-color: white;
+  border-radius: 30px;
+  height: 40px;
   display: flex;
   align-items: center;
 }
@@ -216,6 +207,7 @@ main {
 }
 
 .result-text button {
+  margin-top: 20px;
   border: none;
   background-color: #007679;
   color: white;
@@ -223,4 +215,15 @@ main {
   height: 32px;
   width: 80px;
   border: 1px solid white;
+}
+
+
+@media only screen and (max-width: 1100px){
+  .presentation h2 {
+    font-size: 52px;
+    margin-bottom: 30px;
+  }
+  .input-container #search-input {
+    width: 180px;
+  }
 }
