ready for single page function

--- a/iindex.css
+++ b/iindex.css
@@ -30,7 +30,7 @@ input {
   outline: none;
 }
 button {
-  border: none;
+  border: 1px solid var(--white);
   background-color: var(--green);
   color: white;
 }
