--- a/iindex.css
+++ b/iindex.css
@@ -88,13 +88,14 @@ main {
   url('./media/city-skyline.jpg');
   height: 90vh;
   width: 100%;
-  padding: 0 20px;
+  position: relative;
 }
 /* MAIN - Social Icons */
 .social-icons {
   height: 100%;
   flex-direction: column;
   align-items: center;
+  width: 5%;
 }
 
 .social-icons span {
@@ -109,4 +110,13 @@ main {
   font-size: 28px;
   opacity: .8;
   margin: 20px 0;
+}
+/* MAIN - Sections General */
+.homepage, .contactpage, .aboutpage {
+  border: 1px solid red;
+  position: absolute;
+  margin-left: 6%;
+  width: 100%;
+  height: 100vh;
+
 }
