--- a/iindex.css
+++ b/iindex.css
@@ -7,6 +7,7 @@
   --title-small: 36px;
   --text-big: 18px;
   --text-small: 16px;
+  --bg-grey: rgba(77, 82, 82, 0.6);
 }
 *{
   margin: 0;
@@ -133,7 +134,6 @@ main {
 }
 /* MAIN - Sections General */
 .homepage, .contactpage, .aboutpage {
-  border: 1px solid red;
   position: absolute;
   margin-left: 6%;
   width: 94%;
@@ -156,6 +156,7 @@ main {
 }
 /* MAIN - About Page */
 .aboutpage {
+  height: 90%;
   flex-direction: column;
   justify-content: space-evenly;
 }
@@ -163,12 +164,12 @@ main {
   padding: 20px;
   margin-right: 20px;
   border-radius: 6px;
-  background-color:  rgba(77, 82, 82, 0.6);
+  background-color: var(--bg-grey);
   
 }
 .team-card{
   border-radius: 6px;
-  background-color:  rgba(77, 82, 82, 0.6);
+  background-color: var(--bg-grey);
   margin: 0 20px;
   padding: 12px;
 }
@@ -179,5 +180,39 @@ main {
   background-color: var(--white);
   padding: 6px;
   border-radius: 0 10px 10px 0;
-
+}
+/* MAIN - Contact Page */
+.contactpage{
+  height: 90%;
+  justify-content: space-around;
+  align-items: center;
+}
+.contact-form {
+  background-color: var(--bg-grey);
+  border-radius: 10px;
+  padding: 20px;
+  width: 60%;
+}
+.contact-form div {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0;
+}
+.contact-form label {
+  color: var(--white);
+  margin-bottom: 6px;
+}
+.contact-form input, textarea {
+  background-color: transparent;
+  border: 1px solid var(--white);
+  padding: 10px;
+  border-radius: 10px;
+}
+.contact-form input::placeholder, textarea::placeholder{
+  color: var(--darkgreen);
+}
+.contact-form button{
+  height: 40px;
+  border-radius: 6px;
+  font-size: (var(--text-big));
 }
