card result component style

--- a/iindex.css
+++ b/iindex.css
@@ -110,6 +110,7 @@ main {
   height: 90vh;
   width: 100%;
   position: relative;
+  background-size: cover;
 }
 /* MAIN - Social Icons */
 .social-icons {
@@ -141,7 +142,6 @@ main {
 }
 /* MAIN - HomePage */
 #home-content {
-  border: 1px solid yellow;
   width: 50%;
   justify-content: center;
   flex-direction: column;
@@ -154,6 +154,42 @@ main {
 #home-content h2, p, button {
   margin: 20px 0;
 }
+/* HomePage - results */
+#home-results{
+  border: 1px solid orange;
+  width: 50%;
+  overflow-y: scroll;
+  box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#home-results::-webkit-scrollbar {
+  display: none;
+}
+.card-container{
+  background-color: var(--bg-grey);
+  border-radius: 10px;
+  margin: 10px 0;
+  padding: 20px 0;
+  width: 90%;
+
+}
+.card-container img, h4, p {
+  width: 90%;
+  margin-left: 4%;
+}
+
+.card-container img {
+  border-radius: 10px 10px 0 0;
+}
+
+.card-container h4 {
+  background-color: var(--white);
+  padding: 6px;
+  border-radius: 0 0 10px 10px;
+}
+
 /* MAIN - About Page */
 .aboutpage {
   height: 90%;
