search works for countries

--- a/iindex.css
+++ b/iindex.css
@@ -168,16 +168,15 @@ main {
   display: none;
 }
 .card-container{
-  background-color: var(--bg-grey);
+  background-color: var(--darkgreen);
   border-radius: 10px;
   margin: 10px 0;
-  padding: 20px 0;
+  padding: 20px;
   width: 90%;
 
 }
 .card-container img, h4, p {
-  width: 90%;
-  margin-left: 4%;
+  width: 100%;
 }
 
 .card-container img {
@@ -188,6 +187,7 @@ main {
   background-color: var(--white);
   padding: 6px;
   border-radius: 0 0 10px 10px;
+  font-size: larger;
 }
 
 /* MAIN - About Page */
